src/content/docs/en-us/1.13.x/world.md
---
title: World
description: World related tweaks
---

# World

## Loot Barrels 💎

Add random barrels with loot to caves!

<img alt="A lantern placed on a barrel block inside a deepslate cave in Minecraft." style="display: block; margin-left: auto; margin-right: auto;" src="/assets/images/world_loot_barrels.webp" width="520">

By default, barrels will contain same loot as a village toolsmith. You should be able to change the loot and decorations by overriding the feature using a data pack!

## Moist Control 💦

Control farmland hydration range. As simple as that!

## Self Planting Crops 🌾

If possible, plants will plant themselves after some time. Since 0.7.0 you can white/blacklist plants.

Based on [TinyTweaks](https://www.curseforge.com/minecraft/mc-mods/tinytweaks) by HephaestusDev

## Falling Bee Nests 🐝

Randomly, bee nests will fall from their trees, making the bees inside homeless & if a player is nearby, very angry.

<video style="display: block; margin-left: auto; margin-right: auto; max-width: 100%;" width="520" muted autoplay loop>
  <source src="/assets/videos/bee_fall.webm" type="video/webm">
  Your browser does not support the video tag.
</video>

In my tests, it usually takes 0-2 days for a nest to fall.

Arrows also work!

<video style="display: block; margin-left: auto; margin-right: auto; max-width: 100%;" width="520" muted autoplay loop>
  <source src="/assets/videos/bee_fall_arrow.webm" type="video/webm">
  Your browser does not support the video tag.
</video>

## Temperature Based Crop Growth Speed 🌡️

When this option is on, plants will only grow in their preferred temperatures, e.g. cacti will only grow in deserts, nether and savannas.

This option is data-driven! Checkout [this](https://github.com/melontini/andromeda/blob/1.20-fabric/src/main/resources/data/andromeda/andromeda/crop_temperatures/crops/minecraft_wheat.json) for an example and more info.

## Fast Fire Spread 🔥 <Badge type="danger" text="Deprecated" />

Fire will spread much faster and wider.
